{{ Toc( float='right' ) }}

h3. 0.1dev ``{i} on Fri 2011-03-15``

-----

{{{ Nested 
# { 'font-size' : 'small', 'color' : 'gray' }
Document edited using Vim <br>
/* vim: set filetype=etx : */
}}}