@@ -1,0 +1,18 @@
+CouchPy
+=======
+
+CouchPy is programmatic interface in python for CouchDB database management
+systems. Apart from providing a programmatic access, it also provides data
+modelling, querying, creating views, and MVCS features. If you are new to
+NoSQL way of building database, you might have to forego some of the ideas
+learnt from relational database systems.
+Visit `microsite <https://couchpy.pluggdapps.com>`_ for more information.
+
+Quicklinks
+==========
+
+* `README <http://couchpy.pluggdapps.com/dev/readme>`_
+* `CHANGELOG <http://couchpy.pluggdapps.com/dev/changelog>`_
+* `Track couchpy development <http://code.google.com/p/couchpy>`_
+* If you have any queries, suggestions
+  `discuss with us <http://groups.google.com/group/pluggdapps>`_
